--- a/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/ansible/roles/nginx/templates/nginx.conf.j2
@@ -1,5 +1,11 @@
 server {
-  listen 80;
+  listen      80;
+  server_name {{ nginx_server_name }};
+  return      302 https://$server_name$request_uri;
+}
+
+server {
+  listen 443;
   root {{project_dir}}/public;
   gzip on;
   gzip_disable "msie6";
@@ -13,20 +19,32 @@ server {
 text/xml application/xml application/xml+rss text/javascript
 application/edn;
 
+  ssl on;
+  ssl_certificate /etc/letsencrypt/live/{{ domain_url }}/fullchain.pem;
+  ssl_certificate_key /etc/letsencrypt/live/{{ domain_url }}/privkey.pem;
+  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+  ssl_prefer_server_ciphers on;
+  ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
+  ssl_session_timeout 1d;
+  ssl_session_cache shared:SSL:50m;
+  ssl_stapling on;
+  ssl_stapling_verify on;
+  add_header Strict-Transport-Security max-age=15768000;
+
   client_max_body_size 100M;
 
   location / {
     autoindex on;
     index index.html;
-    try_files $uri $uri/ /index.html @backend;
+    try_files $uri $uri/ /index.html;
   }
 
-  location @backend {
+  location /api/ {
     proxy_connect_timeout 600;
     proxy_send_timeout    600;
     proxy_read_timeout    600;
     send_timeout          600;
-    proxy_pass            http://127.0.0.1:8000;
+    proxy_pass            http://127.0.0.1:8088;
     proxy_set_header      Host $http_host;
     proxy_http_version    1.1;
     proxy_set_header      Upgrade $http_upgrade;
