--- a/ansible/roles/nginx/templates/nginx.conf.j2
+++ b/ansible/roles/nginx/templates/nginx.conf.j2
@@ -52,3 +52,43 @@ application/edn;
     proxy_set_header      X-Forwarded-Proto $scheme;
   }
 }
+
+server {
+            listen 80;
+            root /var/www/html/wordpress/public_html;
+            index index.php index.html;
+            server_name blog.kefirnadar.rs;
+
+	    access_log /var/log/nginx/blog.access.log;
+            error_log /var/log/nginx/blog.error.log;
+
+            location / {
+                         try_files $uri $uri/ /index.php?$args;
+            }
+
+            location ~ \.php$ {
+                         include snippets/fastcgi-php.conf;
+                         fastcgi_pass unix:/run/php/php8.2-fpm.sock;
+            }
+
+            location ~ /\.ht {
+                         deny all;
+            }
+
+            location = /favicon.ico {
+                         log_not_found off;
+                         access_log off;
+            }
+
+            location = /robots.txt {
+                         allow all;
+                         log_not_found off;
+                         access_log off;
+           }
+
+            rewrite /wp-admin$ $scheme://$host$uri/ permanent;
+            location ~*  \.(jpg|jpeg|png|gif|css|js|ico)$ {
+                         expires max;
+                         log_not_found off;
+           }
+}
